--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
