--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,10 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
